--- a/Game_Engine.vcxproj
+++ b/Game_Engine.vcxproj
@@ -116,11 +116,21 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>vcpkg\installed\x64-windows\include\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>vcpkg\installed\x64-windows\lib\;vcpkg\installed\x64-windows\lib\manual-link\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
+    <PreBuildEvent>
+      <Command>git submodule update --recursive --remote
+call vcpkg\bootstrap-vcpkg.bat
+vcpkg\vcpkg.exe install opengl glew sdl2 imgui[opengl3-binding,sdl2-binding] sdl2-mixer-ext --triplet x64-windows
+copy "vcpkg\installed\x64-windows\bin\*.*" "$(OutDir)"
+echo "----- Successfully installed dependencies -----"
+</Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
