Testing some of ImGui's features. - Also cleaned up some comments and stuff.

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,19 +4,41 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=650,20
-Size=550,680
+Pos=0,19
+Size=327,749
 Collapsed=0
+DockId=0x00000002,0
 
 [Window][Window A]
-Pos=60,60
-Size=150,71
+Pos=371,80
+Size=315,327
 Collapsed=0
+DockId=0x00000001,0
 
 [Window][Window B]
-Pos=60,60
-Size=150,71
+Pos=371,80
+Size=315,327
+Collapsed=0
+DockId=0x00000001,1
+
+[Window][DockSpace Demo]
+Pos=0,19
+Size=1208,912
+Collapsed=0
+
+[Window][DockSpaceViewport_11111111]
+Pos=0,19
+Size=1024,749
+Collapsed=0
+
+[Window][Window C]
+Pos=627,463
+Size=285,144
 Collapsed=0
 
 [Docking][Data]
+DockNode    ID=0x00000001 Pos=371,80 Size=315,327 Selected=0x7B17B3D3
+DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1024,749 Split=X
+  DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=327,749 Selected=0xE87781F4
+  DockNode  ID=0x00000003 Parent=0x8B93E3BD SizeRef=695,749 CentralNode=1
 
