--- a/imgui.ini
+++ b/imgui.ini
@@ -36,6 +36,11 @@ Pos=627,463
 Size=285,144
 Collapsed=0
 
+[Window][About]
+Pos=109,415
+Size=392,267
+Collapsed=0
+
 [Docking][Data]
 DockNode    ID=0x00000001 Pos=371,80 Size=315,327 Selected=0x7B17B3D3
 DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1024,749 Split=X
