--- a/Game_Engine.vcxproj
+++ b/Game_Engine.vcxproj
@@ -92,7 +92,7 @@
     </Link>
     <PreBuildEvent>
       <Command>call vcpkg\bootstrap-vcpkg.bat
-vcpkg\vcpkg.exe install opengl glew sdl2 imgui[opengl3-binding,sdl2-binding,docking-experimental] sdl2-mixer-ext --recurse --triplet x64-windows
+vcpkg\vcpkg.exe install opengl glew glm sdl2 imgui[opengl3-binding,sdl2-binding,docking-experimental] sdl2-mixer-ext --recurse --triplet x64-windows
 copy "vcpkg\installed\x64-windows\bin\*.*" "$(OutDir)"</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
@@ -116,7 +116,7 @@ copy "vcpkg\installed\x64-windows\bin\*.*" "$(OutDir)"</Command>
     </Link>
     <PreBuildEvent>
       <Command>call vcpkg\bootstrap-vcpkg.bat
-vcpkg\vcpkg.exe install opengl glew sdl2 imgui[opengl3-binding,sdl2-binding,docking-experimental] sdl2-mixer-ext --recurse --triplet x64-windows
+vcpkg\vcpkg.exe install opengl glew glm sdl2 imgui[opengl3-binding,sdl2-binding,docking-experimental] sdl2-mixer-ext --recurse --triplet x64-windows
 copy "vcpkg\installed\x64-windows\bin\*.*" "$(OutDir)"</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
