--- a/Game_Engine.vcxproj
+++ b/Game_Engine.vcxproj
@@ -88,11 +88,11 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>vcpkg\installed\x64-windows\lib\;vcpkg\installed\x64-windows\lib\manual-link\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>glew32.lib;glu32.lib;opengl32.lib;sdl2.lib;sdl2main.lib;sdl2_mixer_ext.lib;imgui.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glew32.lib;glu32.lib;opengl32.lib;sdl2.lib;sdl2main.lib;sdl2_mixer_ext.lib;imgui.lib;jsoncpp.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PreBuildEvent>
       <Command>call vcpkg\bootstrap-vcpkg.bat
-vcpkg\vcpkg.exe install opengl glew glm sdl2 imgui[opengl3-binding,sdl2-binding,docking-experimental] sdl2-mixer-ext --recurse --triplet x64-windows
+vcpkg\vcpkg.exe install opengl glew glm sdl2 imgui[opengl3-binding,sdl2-binding,docking-experimental] jsoncpp sdl2-mixer-ext --recurse --triplet x64-windows
 copy "vcpkg\installed\x64-windows\bin\*.*" "$(OutDir)"</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
@@ -111,12 +111,12 @@ copy "vcpkg\installed\x64-windows\bin\*.*" "$(OutDir)"</Command>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>glew32.lib;glu32.lib;opengl32.lib;sdl2.lib;sdl2main.lib;sdl2_mixer_ext.lib;imgui.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glew32.lib;glu32.lib;opengl32.lib;sdl2.lib;sdl2main.lib;sdl2_mixer_ext.lib;imgui.lib;jsoncpp.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>vcpkg\installed\x64-windows\lib\;vcpkg\installed\x64-windows\lib\manual-link\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <PreBuildEvent>
       <Command>call vcpkg\bootstrap-vcpkg.bat
-vcpkg\vcpkg.exe install opengl glew glm sdl2 imgui[opengl3-binding,sdl2-binding,docking-experimental] sdl2-mixer-ext --recurse --triplet x64-windows
+vcpkg\vcpkg.exe install opengl glew glm sdl2 imgui[opengl3-binding,sdl2-binding,docking-experimental] jsoncpp sdl2-mixer-ext --recurse --triplet x64-windows
 copy "vcpkg\installed\x64-windows\bin\*.*" "$(OutDir)"</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
