--- a/GameEditor/GameEditor.vcxproj
+++ b/GameEditor/GameEditor.vcxproj
@@ -124,6 +124,11 @@
       <AdditionalLibraryDirectories>..\vcpkg\installed\x64-windows\lib\;..\vcpkg\installed\x64-windows\lib\manual-link\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>sdl2.lib;sdl2main.lib;imgui.lib;jsoncpp.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PreBuildEvent>
+      <Command>call ..\vcpkg\bootstrap-vcpkg.bat
+..\vcpkg\vcpkg.exe install sdl2 imgui[opengl3-binding,sdl2-binding,docking-experimental] jsoncpp --recurse --triplet x64-windows
+copy "..\vcpkg\installed\x64-windows\bin\*.*" "$(OutDir)"</Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -143,6 +148,11 @@
       <AdditionalLibraryDirectories>..\vcpkg\installed\x64-windows\lib\;..\vcpkg\installed\x64-windows\lib\manual-link\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>sdl2.lib;sdl2main.lib;imgui.lib;jsoncpp.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PreBuildEvent>
+      <Command>call ..\vcpkg\bootstrap-vcpkg.bat
+..\vcpkg\vcpkg.exe install sdl2 imgui[opengl3-binding,sdl2-binding,docking-experimental] jsoncpp --recurse --triplet x64-windows
+copy "..\vcpkg\installed\x64-windows\bin\*.*" "$(OutDir)"</Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
