Camera and grid testing

--- a/GameEditor/imgui.ini
+++ b/GameEditor/imgui.ini
@@ -9,31 +9,33 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=0,19
-Size=509,749
+Pos=13,32
+Size=200,674
+Collapsed=1
+
+[Window][Window A]
+Pos=678,33
+Size=173,83
+Collapsed=0
+DockId=0x00000001,1
+
+[Window][Window B]
+Pos=678,33
+Size=173,83
 Collapsed=0
 DockId=0x00000001,0
 
-[Window][Window A]
-Pos=614,72
-Size=263,167
-Collapsed=0
-DockId=0x00000003,0
-
-[Window][Window B]
-Pos=614,72
-Size=263,167
-Collapsed=0
-DockId=0x00000003,1
-
 [Window][Window C]
-Pos=757,387
+Pos=858,32
 Size=150,94
 Collapsed=0
 
+[Window][About]
+Pos=30,47
+Size=1018,267
+Collapsed=1
+
 [Docking][Data]
-DockNode    ID=0x00000003 Pos=614,72 Size=263,167 Selected=0x7B17B3D3
-DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1024,749 Split=X
-  DockNode  ID=0x00000001 Parent=0x8B93E3BD SizeRef=509,749 Selected=0xE87781F4
-  DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=513,749 CentralNode=1
+DockNode  ID=0x00000001 Pos=678,33 Size=173,83 Selected=0x3CB7C903
+DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1024,749 CentralNode=1
 
