Fully tested JSONParser.h. Works.
Also added useful information in JSONParser.h in order to Write/Read files.

--- a/GameEditor/GameEditor.vcxproj
+++ b/GameEditor/GameEditor.vcxproj
@@ -166,6 +166,7 @@ copy "..\vcpkg\installed\x64-windows\bin\*.*" "$(OutDir)"</Command>
   <ItemGroup>
     <ClInclude Include="Application.h" />
     <ClInclude Include="Globals.h" />
+    <ClInclude Include="JSONParser.h" />
     <ClInclude Include="Module.h" />
     <ClInclude Include="ModuleInput.h" />
     <ClInclude Include="ModuleRenderer.h" />
