--- a/GameEditor/imgui.ini
+++ b/GameEditor/imgui.ini
@@ -36,6 +36,6 @@ Size=1018,267
 Collapsed=1
 
 [Docking][Data]
-DockNode  ID=0x00000001 Pos=678,33 Size=173,83 Selected=0x3CB7C903
+DockNode  ID=0x00000001 Pos=678,33 Size=173,83 Selected=0x7B17B3D3
 DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1024,749 CentralNode=1
 
