--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -189,6 +189,7 @@ copy "..\vcpkg\installed\x64-windows\bin\*.*" "$(OutDir)"</Command>
     <ClInclude Include="Engine_Module.h" />
     <ClInclude Include="Engine_ModuleRenderer3D.h" />
     <ClInclude Include="Graphic.h" />
+    <ClInclude Include="JSONParser.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="Texture2D.h" />
   </ItemGroup>
