First design of the UI
- Added new Menu Buttons
- Reworked About menu

--- a/GameEditor/imgui.ini
+++ b/GameEditor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,20
-Size=1024,748
+Size=1680,959
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,8 +9,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=11,32
-Size=292,674
+Pos=189,10
+Size=463,674
 Collapsed=0
 
 [Window][Window A]
@@ -45,7 +45,27 @@ Pos=60,60
 Size=175,88
 Collapsed=0
 
+[Window][About...]
+Pos=391,103
+Size=281,720
+Collapsed=0
+
+[Table][0x47600645,3]
+RefScale=14
+Column 0  Width=48
+Column 1  Width=48
+Column 2  Weight=1.0000
+
+[Table][0xDE6957FF,6]
+RefScale=14
+Column 0  Width=48
+Column 1  Width=48
+Column 2  Width=-1
+Column 3  Weight=1.0000
+Column 4  Weight=1.0000
+Column 5  Weight=-1.0000
+
 [Docking][Data]
 DockNode  ID=0x00000001 Pos=678,33 Size=173,83 Selected=0x7B17B3D3
-DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,20 Size=1024,748 CentralNode=1
+DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,20 Size=1680,959 CentralNode=1
 
