--- a/GameEditor/imgui.ini
+++ b/GameEditor/imgui.ini
@@ -14,19 +14,19 @@ Size=463,674
 Collapsed=0
 
 [Window][Window A]
-Pos=678,33
-Size=173,83
-Collapsed=0
-DockId=0x00000001,1
-
-[Window][Window B]
-Pos=678,33
+Pos=597,84
 Size=173,83
 Collapsed=0
 DockId=0x00000001,0
 
+[Window][Window B]
+Pos=597,84
+Size=173,83
+Collapsed=0
+DockId=0x00000001,1
+
 [Window][Window C]
-Pos=860,32
+Pos=422,82
 Size=150,94
 Collapsed=0
 
@@ -50,6 +50,24 @@ Pos=391,103
 Size=281,720
 Collapsed=0
 
+[Window][Hierarchy]
+Pos=0,20
+Size=209,528
+Collapsed=0
+DockId=0x00000003,0
+
+[Window][Example: Log]
+Pos=0,550
+Size=1024,218
+Collapsed=0
+DockId=0x00000007,0
+
+[Window][Inspector]
+Pos=779,20
+Size=245,528
+Collapsed=0
+DockId=0x00000005,0
+
 [Table][0x47600645,3]
 RefScale=14
 Column 0  Width=48
@@ -66,6 +84,12 @@ Column 4  Weight=1.0000
 Column 5  Weight=-1.0000
 
 [Docking][Data]
-DockNode  ID=0x00000001 Pos=678,33 Size=173,83 Selected=0x7B17B3D3
-DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,20 Size=1024,748 CentralNode=1
+DockNode        ID=0x00000001 Pos=597,84 Size=173,83 Selected=0x7B17B3D3
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,20 Size=1024,748 Split=Y
+  DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=1920,777 Split=X
+    DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=777,748 Split=X
+      DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=209,748 Selected=0x29EABFBD
+      DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=1462,748 CentralNode=1
+    DockNode    ID=0x00000005 Parent=0x00000006 SizeRef=245,748 Selected=0xE7039252
+  DockNode      ID=0x00000007 Parent=0x8B93E3BD SizeRef=1920,218 Selected=0xDBFE1153
 
