--- a/GameEditor/imgui.ini
+++ b/GameEditor/imgui.ini
@@ -68,6 +68,16 @@ Size=245,528
 Collapsed=0
 DockId=0x00000005,0
 
+[Window][FPS Log]
+Pos=352,80
+Size=316,136
+Collapsed=0
+
+[Window][FPS Graph]
+Pos=342,61
+Size=342,296
+Collapsed=0
+
 [Table][0x47600645,3]
 RefScale=14
 Column 0  Width=48
@@ -86,7 +96,7 @@ Column 5  Weight=-1.0000
 [Docking][Data]
 DockNode        ID=0x00000001 Pos=597,84 Size=173,83 Selected=0x7B17B3D3
 DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,20 Size=1024,748 Split=Y
-  DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=1920,777 Split=X
+  DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=1920,373 Split=X
     DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=777,748 Split=X
       DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=241,748 Selected=0x29EABFBD
       DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=534,748 CentralNode=1
