--- a/GameEditor/imgui.ini
+++ b/GameEditor/imgui.ini
@@ -74,9 +74,10 @@ Size=316,136
 Collapsed=0
 
 [Window][FPS Graph]
-Pos=342,61
-Size=342,296
+Pos=0,20
+Size=1024,279
 Collapsed=0
+DockId=0x00000008,0
 
 [Table][0x47600645,3]
 RefScale=14
@@ -94,12 +95,14 @@ Column 4  Weight=1.0000
 Column 5  Weight=-1.0000
 
 [Docking][Data]
-DockNode        ID=0x00000001 Pos=597,84 Size=173,83 Selected=0x7B17B3D3
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,20 Size=1024,748 Split=Y
-  DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=1920,373 Split=X
-    DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=777,748 Split=X
-      DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=241,748 Selected=0x29EABFBD
-      DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=534,748 CentralNode=1
-    DockNode    ID=0x00000005 Parent=0x00000006 SizeRef=245,748 Selected=0xE7039252
-  DockNode      ID=0x00000007 Parent=0x8B93E3BD SizeRef=1920,218 Selected=0xDBFE1153
+DockNode          ID=0x00000001 Pos=597,84 Size=173,83 Selected=0x7B17B3D3
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,20 Size=1024,748 Split=Y
+  DockNode        ID=0x00000008 Parent=0x8B93E3BD SizeRef=1024,279 Selected=0xF3C3BC76
+  DockNode        ID=0x00000009 Parent=0x8B93E3BD SizeRef=1024,467 Split=Y
+    DockNode      ID=0x00000006 Parent=0x00000009 SizeRef=1920,373 Split=X
+      DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=777,748 Split=X
+        DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=241,748 Selected=0x29EABFBD
+        DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=534,748 CentralNode=1
+      DockNode    ID=0x00000005 Parent=0x00000006 SizeRef=245,748 Selected=0xE7039252
+    DockNode      ID=0x00000007 Parent=0x00000009 SizeRef=1920,218 Selected=0xDBFE1153
 
