Added MeshLoader class.
- Also implemented Mesh copy constructor.
- Removed Ptr typedef for debugging clarity.
- Compilation error on doing a pushback to the gameObjectsList still not solved.

--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -195,6 +195,7 @@ copy "..\vcpkg\installed\x64-windows\bin\*.*" "$(OutDir)"</Command>
     <ClInclude Include="Graphic.h" />
     <ClInclude Include="JSONParser.h" />
     <ClInclude Include="Mesh.h" />
+    <ClInclude Include="MeshLoader.h" />
     <ClInclude Include="Texture2D.h" />
     <ClInclude Include="Transform.h" />
   </ItemGroup>
