Implemented Hardware detection window.
- Created a struct inside ModuleUI to gather hardware Information.
- Also created function to get the info.

--- a/GameEditor/imgui.ini
+++ b/GameEditor/imgui.ini
@@ -75,9 +75,13 @@ Collapsed=0
 
 [Window][FPS Graph]
 Pos=0,20
-Size=1024,279
+Size=341,280
 Collapsed=0
-DockId=0x00000008,0
+
+[Window][Hardware information]
+Pos=352,34
+Size=245,180
+Collapsed=0
 
 [Table][0x47600645,3]
 RefScale=14
