Implemented some functionality to the Inspector.
- When selecting a GameObject, shows if they have Transform (it should always show), Mesh, and Texture2D (NYI).
Show the information regarding the components.

--- a/GameEditor/imgui.ini
+++ b/GameEditor/imgui.ini
@@ -63,8 +63,8 @@ Collapsed=0
 DockId=0x00000007,0
 
 [Window][Inspector]
-Pos=779,20
-Size=245,528
+Pos=736,20
+Size=288,528
 Collapsed=0
 DockId=0x00000005,0
 
@@ -79,9 +79,10 @@ Size=341,280
 Collapsed=0
 
 [Window][Hardware information]
-Pos=352,34
-Size=245,180
+Pos=0,20
+Size=1024,237
 Collapsed=0
+DockId=0x0000000A,0
 
 [Table][0x47600645,3]
 RefScale=14
@@ -99,14 +100,16 @@ Column 4  Weight=1.0000
 Column 5  Weight=-1.0000
 
 [Docking][Data]
-DockNode          ID=0x00000001 Pos=597,84 Size=173,83 Selected=0x7B17B3D3
-DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,20 Size=1024,748 Split=Y
-  DockNode        ID=0x00000008 Parent=0x8B93E3BD SizeRef=1024,279 Selected=0xF3C3BC76
-  DockNode        ID=0x00000009 Parent=0x8B93E3BD SizeRef=1024,467 Split=Y
-    DockNode      ID=0x00000006 Parent=0x00000009 SizeRef=1920,373 Split=X
-      DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=777,748 Split=X
-        DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=241,748 Selected=0x29EABFBD
-        DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=534,748 CentralNode=1
-      DockNode    ID=0x00000005 Parent=0x00000006 SizeRef=245,748 Selected=0xE7039252
-    DockNode      ID=0x00000007 Parent=0x00000009 SizeRef=1920,218 Selected=0xDBFE1153
+DockNode            ID=0x00000001 Pos=597,84 Size=173,83 Selected=0x7B17B3D3
+DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,20 Size=1024,748 Split=Y
+  DockNode          ID=0x0000000A Parent=0x8B93E3BD SizeRef=1024,237 Selected=0xBE49C08A
+  DockNode          ID=0x0000000B Parent=0x8B93E3BD SizeRef=1024,509 Split=Y
+    DockNode        ID=0x00000008 Parent=0x0000000B SizeRef=1024,279 Selected=0xF3C3BC76
+    DockNode        ID=0x00000009 Parent=0x0000000B SizeRef=1024,467 Split=Y
+      DockNode      ID=0x00000006 Parent=0x00000009 SizeRef=1920,373 Split=X
+        DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=734,748 Split=X
+          DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=241,748 Selected=0x29EABFBD
+          DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=491,748 CentralNode=1
+        DockNode    ID=0x00000005 Parent=0x00000006 SizeRef=288,748 Selected=0xE7039252
+      DockNode      ID=0x00000007 Parent=0x00000009 SizeRef=1920,218 Selected=0xDBFE1153
 
