Changed gameObjSelected from local to a raw pointer
- Made the necessary changed to the whole project in order to make it work correctly.
- Added new logs to the logHistory that detects if an .fbx file or a .png file is dropped.
- Also used CodeMaid extension to clean all the code.

--- a/GameEditor/imgui.ini
+++ b/GameEditor/imgui.ini
@@ -36,13 +36,13 @@ Size=1050,331
 Collapsed=0
 
 [Window][Cam Debug]
-Pos=60,60
+Pos=242,39
 Size=252,267
 Collapsed=0
 
 [Window][Options Window]
 Pos=243,39
-Size=240,104
+Size=280,264
 Collapsed=0
 
 [Window][About...]
@@ -63,8 +63,8 @@ Collapsed=0
 DockId=0x00000007,0
 
 [Window][Inspector]
-Pos=736,20
-Size=288,564
+Pos=719,20
+Size=305,564
 Collapsed=0
 DockId=0x00000005,0
 
@@ -92,7 +92,7 @@ Collapsed=0
 Pos=0,586
 Size=1024,182
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x0000000C,0
 
 [Table][0x47600645,3]
 RefScale=14
@@ -116,10 +116,10 @@ DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,20 Size=1024,748 Split
     DockNode        ID=0x00000008 Parent=0x0000000A SizeRef=1024,279 Selected=0xF3C3BC76
     DockNode        ID=0x00000009 Parent=0x0000000A SizeRef=1024,467 Split=Y
       DockNode      ID=0x00000006 Parent=0x00000009 SizeRef=1920,373 Split=X
-        DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=734,748 Split=X
+        DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=717,748 Split=X
           DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=241,748 Selected=0x29EABFBD
-          DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=491,748 CentralNode=1
-        DockNode    ID=0x00000005 Parent=0x00000006 SizeRef=288,748 Selected=0xE7039252
+          DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=474,748 CentralNode=1
+        DockNode    ID=0x00000005 Parent=0x00000006 SizeRef=305,748 Selected=0xE7039252
       DockNode      ID=0x00000007 Parent=0x00000009 SizeRef=1920,218 Selected=0xDBFE1153
-  DockNode          ID=0x0000000B Parent=0x8B93E3BD SizeRef=1024,182 Selected=0xCB85D25D
+  DockNode          ID=0x0000000C Parent=0x8B93E3BD SizeRef=1024,182 Selected=0xCB85D25D
 
