Scene Module Added
added scene module with basic module functions

note: changed to v143 toolset, couldnt disable change of project settings because files were added

--- a/GameEngine/GameEngine.vcxproj.filters
+++ b/GameEngine/GameEngine.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="GameObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Engine_ModuleScene.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameEngine.h">
@@ -109,6 +112,9 @@
     </ClInclude>
     <ClInclude Include="Cone.h">
       <Filter>Primitives</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine_ModuleScene.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
