--- a/GameEngine/GameEngine.vcxproj.filters
+++ b/GameEngine/GameEngine.vcxproj.filters
@@ -116,5 +116,8 @@
     <ClInclude Include="Engine_ModuleScene.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="BoundingBox.hpp">
+      <Filter>Tools</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
