added UUID start
added pcg library for uuid generation

added uuid generator function in engine.h

added save function in gameobjects and scene

--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -139,7 +139,7 @@
     </Lib>
     <PreBuildEvent>
       <Command>call ..\vcpkg\bootstrap-vcpkg.bat
-..\vcpkg\vcpkg.exe install opengl glew glm sdl2 jsoncpp devil[libjpeg,libpng] assimp --recurse --triplet x64-windows
+..\vcpkg\vcpkg.exe install opengl glew glm sdl2 jsoncpp pcg devil[libjpeg,libpng] assimp --recurse --triplet x64-windows
 copy "..\vcpkg\installed\x64-windows\bin\*.*" "$(OutDir)"</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
@@ -170,7 +170,7 @@ copy "..\vcpkg\installed\x64-windows\bin\*.*" "$(OutDir)"</Command>
     </Lib>
     <PreBuildEvent>
       <Command>call ..\vcpkg\bootstrap-vcpkg.bat
-..\vcpkg\vcpkg.exe install opengl glew glm sdl2 jsoncpp devil[libjpeg,libpng] assimp --recurse --triplet x64-windows
+..\vcpkg\vcpkg.exe install opengl glew glm sdl2 jsoncpp pcg devil[libjpeg,libpng] assimp --recurse --triplet x64-windows
 copy "..\vcpkg\installed\x64-windows\bin\*.*" "$(OutDir)"</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
