UUIDs are assigned to gO
added generate and assignation of UUIDs to addGameObject functions

added saveAs function to scene module for future implementation

wondering possibility to add scene struct in order to make saving and loading more easy since gameobject list will be confined in one scene object, and that selected scene will be managed in the engine_modulescene

--- a/GameEditor/imgui.ini
+++ b/GameEditor/imgui.ini
@@ -94,6 +94,11 @@ Size=1024,182
 Collapsed=0
 DockId=0x0000000C,0
 
+[Window][Reparent GameObject]
+Pos=359,76
+Size=96,126
+Collapsed=0
+
 [Table][0x47600645,3]
 RefScale=14
 Column 0  Width=48
